// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deps.all returns all the dependencies 1`] = `
Array [
  Object {
    "name": "dep1",
    "type": "devenv",
  },
  Object {
    "name": "dep3",
    "type": "peer",
  },
  Object {
    "name": "dep2",
    "type": "runtime",
  },
]
`;

exports[`minimal case 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "dependencies": Array [
    Object {
      "name": "my-first-dep",
      "type": "runtime",
    },
  ],
}
`;

exports[`with version requirement 1`] = `
Object {
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
  "dependencies": Array [
    Object {
      "name": "depy",
      "type": "peer",
      "version": "^7",
    },
  ],
}
`;
